@@ -1,3 +1,8 @@
+2006-12-01  Joe English  <jenglish@users.sourceforge.net>
+
+	* generic/ttk/ttkTheme.h, generic/ttk/ttkLayout.c:
+	Dead code removal.
+
 2006-11-30  Daniel Steffen  <das@users.sourceforge.net>
 
 	* macosx/tkMacOSXDialog.c (Tk_MessageBoxObjCmd): fix inability to use
